samples/_failures_safe/1761470132_8c186f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed97c4b3.c: In function ‘main’:
./samples/SAFE/__tmp_ed97c4b3.c:156:20: error: missing terminating " character
  156 |             printf("No valid
      |                    ^~~~~~~~~
./samples/SAFE/__tmp_ed97c4b3.c:156:13: error: expected expression at end of input
  156 |             printf("No valid
      |             ^~~~~~
./samples/SAFE/__tmp_ed97c4b3.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed97c4b3.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed97c4b3.c:156:13: error: expected declaration or statement at end of input
